--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>maquest</title>
+    <title>doomguy goes on maquest</title>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <div class="container">
-      <H1 id="location">Hier is mijn lokatie</H1>
+      <H1 id="location">Here is my location</H1>
       <div class="image">
         <div class = "treasure">
           <img id="treasure" src="" width="100" alt="">
         </div>
           <img id="imageLocation" src="" width="600" alt="">
       </div>
-        <div id="description">dit is de omschrijving</div>
+        <div id="description">Kill the last pinky</div>
       <div id="inventory"></div>
-      <ul id="possibilities">dit zijn mijn mogelijkheden</ul>
+      <ul id="possibilities">These are my possibilities</ul>
       <div class="input">
-        <label for="myInput">Wat ga je doen? </label><input type="text" name="myInput" id="myInput" autofocus>
+        <label for="myInput">Type here? </label><input type="text" name="myInput" id="myInput" autofocus>
       </div>
       <div id="feedback"></div>
 
