--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="inventory"></div>
       <ul id="possibilities">These are my possibilities</ul>
       <div class="input">
-        <label for="myInput">Type here? </label><input type="text" name="myInput" id="myInput" autofocus>
+        <label for="myInput">Type here: </label><input type="text" name="myInput" id="myInput" autofocus>
       </div>
       <div id="feedback"></div>
 
